# Florencia

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Dependencies.lua  Florencia-Engine.sln  Florencia.sln  README.md  premake5.lua
FloEditor/: CMakeLists.txt  Cargo.toml  FloEditor.vcxproj  premake5.lua
FloEditor/src/: EditorLayer.cpp  EditorLayer.cppm  EditorLayer.h  EditorLayer.ixx  FloEditor.cpp  FloEditor.cppm  FloEditor.h  FloEditor.ixx  application.rs  editor.rs  lib.rs  main.rs
FloEditor/src/assets/: FloEditor.aps  FloEditor.rc  resource.h
Florencia-Engine/: CMakeLists.txt  Florencia-Engine.vcxproj  premake5.lua
Florencia-Engine/src/: Florencia.cppm  Florencia.h  Florencia.ixx  Main.cpp  Platform.h  TODO.cpp  TODO.h
Florencia-Engine/src/Core/: Application.cpp  Application.h  EntryPoint.h  Window.cpp  Window.h
Florencia-Engine/src/Florencia/Audio/: AudioFile.ixx  SineOscillator.cpp  SineOscillator.h  SineOscillator.ixx
Florencia-Engine/src/Florencia/Core/: Application.cpp  Application.cppm  Application.h  Application.ixx  Base.h  Console.cpp  Console.cppm  Console.h  Console.ixx  EntryPoint.h  KeyCodes.cppm  KeyCodes.h  KeyCodes.ixx  Layer.cpp  Layer.cppm  Layer.h  Layer.ixx  LayerStack.cpp  LayerStack.cppm  LayerStack.h  LayerStack.ixx  MouseCodes.cppm  MouseCodes.h  MouseCodes.ixx  PlatformDetection.h  TimeStep.h  Timestep.cppm  Timestep.h  Timestep.ixx  Window.cpp  Window.cppm  Window.h  Window.ixx
Florencia-Engine/src/Florencia/Events/: AppEvent.h  ApplicationEvent.cppm  ApplicationEvent.h  ApplicationEvent.ixx  Event.cpp  Event.cppm  Event.h  Event.ixx  KeyEvent.cppm  KeyEvent.h  KeyEvent.ixx  MouseEvent.cppm  MouseEvent.h  MouseEvent.ixx
Florencia-Engine/src/Florencia/Math/: Declarations.cppm  Declarations.h  Declarations.ixx  FloMath.cppm  FloMath.h  FloMath.ixx
Florencia-Engine/src/Florencia/MultiThreading/: CommandQueue.cpp  CommandQueue.h  CommandQueue.ixx  ThreadPool.h  ThreadPool.ixx
Florencia-Engine/src/Florencia/Physics/: Constants.h  Constants.ixx  FloPhysics.h  FloPhysics.ixx  Physics.ixx
Florencia-Engine/src/Florencia/Renderer/: BufferLayout.cpp  BufferLayout.h  BufferLayout.ixx  Camera.cpp  Camera.cppm  Camera.h  Device.cpp  Device.h  Device.ixx  GraphicsContext.cpp  GraphicsContext.cppm  GraphicsContext.h  GraphicsContext.ixx  IndexBuffer.cpp  IndexBuffer.h  IndexBuffer.ixx  Material.cpp  Material.h  Material.ixx  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.cppm  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderContext.ixx  Renderer.cpp  Renderer.cppm  Renderer.h  Renderer.ixx  RendererAPI.cpp  RendererAPI.cppm  RendererAPI.h  RendererAPI.ixx  Shader.cpp  Shader.h  Shader.ixx  SwapChain.cpp  SwapChain.h  (+3 more)
Florencia-Engine/src/Florencia/Utilities/: AttachToWindowHandle.ixx  EventCallback.ixx  KeyCodeConverter.cppm  KeyCodeConverter.h  KeyCodeConverter.ixx  SharedPointer.ixx  SmartPointers.h  SmartPointers.ixx  Test.ixx  UniquePointer.ixx
Florencia-Engine/src/Platform/: Platform.h
Florencia-Engine/src/Platform/Android/: AndroidConsole.cpp  AndroidConsole.cppm  AndroidConsole.h  AndroidKeyCodes.cppm  AndroidWindow.cpp  AndroidWindow.cppm  AndroidWindow.h  AndroidWindow.ixx
Florencia-Engine/src/Platform/IPhone/: IPhoneConsole.cpp  IPhoneConsole.cppm  IPhoneConsole.h  IPhoneConsole.ixx  IPhoneKeyCodes.cppm  IPhoneKeyCodes.ixx  IPhoneWindow.cpp  IPhoneWindow.cppm  IPhoneWindow.h  IPhoneWindow.ixx  IWindow.cpp  IWindow.h
Florencia-Engine/src/Platform/Linux/: LinuxConsole.cpp  LinuxConsole.cppm  LinuxConsole.h  LinuxConsole.ixx  LinuxKeyCodes.cppm  LinuxKeyCodes.h  LinuxKeyCodes.ixx  LinuxWindow.cpp  LinuxWindow.cppm  LinuxWindow.h  LinuxWindow.ixx
Florencia-Engine/src/Platform/MacOS/: MacConsole.cpp  MacConsole.cppm  MacConsole.h  MacConsole.ixx  MacOSKeyCodes.cppm  MacOSKeyCodes.ixx  MacWindow.cpp  MacWindow.cppm  MacWindow.h  MacWindow.ixx
Florencia-Engine/src/Platform/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.h
Florencia-Engine/src/Platform/Vulkan/: VKWindow.cpp  VKWindow.h
Florencia-Engine/src/Platform/Windows/: FloWindows.h  WConsole.cpp  WConsole.cppm  WConsole.h  WRenderer.cpp  WRenderer.h  WindowsConsole.cppm  WindowsConsole.ixx  WindowsKeyCodes.cppm  WindowsKeyCodes.h  WindowsKeyCodes.ixx  WindowsWindow.cpp  WindowsWindow.cppm  (+5 more)
Florencia-Engine/src/Renderer/: Renderer.h
FlorenciaEngine/: Cargo.toml
FlorenciaEngine/src/: Application.rs  Window.rs  application.rs  event.rs  layer.rs  lib.rs  renderer.rs  threadpool.rs  window.rs
FlorenciaEngine/src/event/: applicationevent.rs  keyevent.rs  mouseevent.rs
(+94 files in other folders)
