[workspace]
members = [
	"FloEditor",
	"FlorenciaEngine",
]
resolver = "2"

[workspace.lints.rust]
bad_style = "allow"

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true
codegen-units = 16
rpath = false
strip = true
